Fix horizontal scrolling on ios

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -35,6 +35,8 @@ html, body {
 	max-width: 100%;
 	cursor: url(/images/cursor.png), auto;
 	overflow-x: hidden;
+	margin: 0;
+	padding: 0;
 }
 
 body {
